# MAS-PaperHelper

./: .env.example  .gitignore  README.md  project_statement.md  pyproject.toml
config/: config.yaml
core/: config.py  diagnostics.py  intelligent_search.py  keyword_kb.py  langgraph_workflow.py  models.py  query_builder.py  workflow.py
core/agents/: __init__.py  base.py  discovery_agent.py  keyword_extraction_agent.py  query_expansion_agent.py  ranking_agent.py  relevance_check_agent.py  rerank_agent.py  summary_agent.py
core/database/: clickhouse_repository.py  factory.py  sqlite_repository.py
core/llm/: __init__.py  client.py
core/scheduler/: service.py
core/tools/: download.py  parser.py
core/tools/sources/: arxiv.py  base.py  biorxiv_rss.py  circuit_breaker.py  errors.py  google_scholar.py  http_utils.py  registry.py  semantic_scholar.py
core/vector/: chroma_store.py  factory.py
mas_paperhelper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: main.py  test_sources.py
tests/: test_agents_and_workflow.py  test_circuit_and_rerank.py  test_config_and_registry.py  test_diagnostics.py  test_keyword_kb.py  test_langgraph_and_repo.py  test_parse_tool.py  test_query_builder.py  test_ranking_relevance_guard.py  test_scheduler_frequency.py  test_split_endpoints.py  test_summary_agent.py
web/: app.py
web/templates/: index.html
