[project]
name = "mas-paperhelper"
version = "0.1.0"
description = "Configurable multi-agent paper helper skeleton"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.2",
  "httpx>=0.27.0",
  "feedparser>=6.0.11",
  "langgraph>=0.2.52",
  "pypdf>=5.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]
google = [
  "scholarly>=1.7.11",
]
vector = [
  "chromadb>=0.5.23",
]
database = [
  "clickhouse-connect>=0.8.15",
]
rerank = [
  "sentence-transformers>=3.2.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["core*"]
