[project]
name = "mas-paperhelper"
version = "0.1.0"
description = "Configurable multi-agent paper helper skeleton"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.2",
  "httpx>=0.27.0",
  "feedparser>=6.0.11",
  "langgraph>=0.2.52",
  "pypdf>=5.4.0",
  "docling>=2.0.0",
  "torch>=2.6.0",
  "transformers>=4.48.0,<4.50.0",
  "tokenizers>=0.21,<0.22",
  "opencv-python-headless>=4.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]
google = [
  "scholarly>=1.7.11",
]
vector = [
  "chromadb>=0.5.23",
]
database = [
  "clickhouse-connect>=0.8.15",
]
rerank = [
  "sentence-transformers>=3.2.1",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["core*"]
